fix: add semantics to rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     >
   </head>
   <body class="page">
-    <div class="header">
+    <header class="header">
       <img class="header__img task__img" src="./eisenhower-matrix.jpg">
       <a
         class="header__info"
         href="https://goal-life.com/page/method/matrix-eisenhower"
       >Want more details?</a>
-    </div>
-    <div class="main">
-      <p id="topSectionForAddingElementToList">
+    </header>
+    <main class="main">
+      <section id="topSectionForAddingElementToList">
         <label class="new-task__label label-task" for="new-task">Add Item</label>
         <div class="task-row__wrapper">
-          <input id="new-task"class="task__input input-task text__input" type="text">
+          <input id="new-task" class="task__input input-task text__input" type="text">
           <button class="button-task">Add</button>
         </div>
-      </p>
+      </section>
       <h3 class="subheading">Todo</h3>
       <ul id="incompleteTasks" class="list">
         <li class="list__li">
@@ -63,7 +63,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
