refactor: add media alternatives to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header__img task__img" src="./eisenhower-matrix.jpg">
+      <img class="header__img task__img" src="./eisenhower-matrix.jpg" alt="matrix eisenhower">
       <a
         class="header__info"
         href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -35,7 +35,7 @@
           <input type="text" class="task__input input-task text__input">
           <button class="edit button-task">Edit</button>
           <button class="delete button-task">
-            <img class="task__img" src="./remove.svg">
+            <img class="task__img" src="./remove.svg" alt="button image">
           </button>
         </li>
         <li class="editMode list__li">
@@ -47,7 +47,7 @@
           >
           <button class="edit button-task">Save</button>
           <button class="delete button-task">
-            <img class="task__img" src="./remove.svg">
+            <img class="task__img" src="./remove.svg" alt="button image">
           </button>
         </li>
       </ul>
@@ -59,7 +59,7 @@
           <input type="text" class="task__input input-task text__input">
           <button class="edit button-task">Edit</button>
           <button class="delete button-task">
-            <img class="task__img" src="./remove.svg">
+            <img class="task__img" src="./remove.svg" alt="button image">
           </button>
         </li>
       </ul>
