fix: add single style for selectors naming to rule 3.1 in html-and-css

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <ul id="incompleteTasks" class="list">
         <li class="list__li">
           <input class="input-task checkbox__input" type="checkbox">
-          <label class="task__label label-task">Pay Bills</label>
+          <label class="task__label">Pay Bills</label>
           <input type="text" class="task__input input-task text__input">
           <button class="edit button-task">Edit</button>
           <button class="delete button-task">
@@ -55,7 +55,7 @@
       <ul id="completed-tasks" class="list">
         <li class="list__li">
           <input class="input-task checkbox__input" type="checkbox" checked>
-          <label class="task__label label-task">See the Doctor</label>
+          <label class="task__label">See the Doctor</label>
           <input type="text" class="task__input input-task text__input">
           <button class="edit button-task">Edit</button>
           <button class="delete button-task">
